--- a/public/chat.html
+++ b/public/chat.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Adam & Alvin's Fun Lab - Chatroom</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="/chat/style.css">
 </head>
 <body>
   <ul class="pages">
@@ -22,7 +22,7 @@
   </ul>
 
   <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
-  <script src="../socket.io/socket.io.js"></script>
+  <script src="/socket.io/socket.io.js"></script>
   <script src="/chat/main.js"></script>
 </body>
 </html>
