--- a/public/WinstonNOhnoes_Fullscreen.html
+++ b/public/WinstonNOhnoes_Fullscreen.html
@@ -1,7 +1,15 @@
 <html>
 <head>
+  <script src="js/processing-1.4.8.min.js"></script>
+  <script type="text/processing" data-processing-target="processing-canvas">
+    size(400, 400);
+    fill(255);
+    text("Hello", 50, 50);
+  </script>
 </head>
 <body>
-Hello Games
+  <div class="canvas_div" align="center" >
+    <canvas id="processing-canvas"></canvas>
+  </div>
 </body>
 </html>
