don't use draw() function

--- a/public/game.html
+++ b/public/game.html
@@ -128,15 +128,7 @@
   var image_left = paddingExtraH;
   var image_step = 2;
 
-  void draw() {
-    switch (gameScene) {
-        case GAME_SCENE_HOME:
-            {
-                drawHomeScene();
-            }
-            break;
-    }
-  };
+  drawHomeScence();
   </script>
   </head>
   <body>
