--- a/game.html
+++ b/game.html
@@ -18,7 +18,7 @@
     height: 100%;
   }
   </style>
-  <script src="js/processing-1.4.8.js"></script>
+  <script src="game/js/processing-1.4.8.js"></script>
   <script type="text/processing" data-processing-target="processing-canvas">
   /* @pjs preload="images/cs-winston.png,images/cs-ohnoes.png"; */
 
