--- a/public/WinstonNOhnoes_Fullscreen.html
+++ b/public/WinstonNOhnoes_Fullscreen.html
@@ -34,18 +34,16 @@
 
       gtag('config', 'UA-134630487-1');
   </script>
-
+  <script src="js/jquery-3.3.1.min.js"></script>
   <script src="js/processing-1.4.8.min.js"></script>
+  <script src="game/Constants.js"></script>
+  <script src="game/Grid.js"></script>
+  <script src="game/PlayGround.js"></script>
+  <script src="game/Token.js"></script>
+  <script src="game/Player.js"></script>
+  <script src="game/Button.js"></script>
   <script type="text/processing" data-processing-target="processing-canvas">
   /* @pjs preload="images/cs-winston.png,images/cs-ohnoes.png"; */
-
-  const GAME_SCENE_HOME = 0;
-  const GAME_SCENE_PLAYGROUND = 1;
-  const GAME_SCENE_END = 2;
-
-  const TOKEN_SIZE_SMALL = 40;
-  const TOKEN_SIZE_MEDIUM = 70;
-  const TOKEN_SIZE_LARGE = 100;
 
   var gridSize = 160;
   var gridCount = 3;
@@ -54,166 +52,9 @@
   var paddingExtraH = (window.innerWidth - maxSize) / 2;
   var paddingExtraV = (window.innerHeight - maxSize) / 2;
   size(window.innerWidth, window.innerHeight);
-
-  var Grid = function(x, y, size) {
-        this.x = x;
-        this.y = y;
-        this.size = size;
-        this.token_list = [];
-        this.owner = 0;
-  };
-
-  Grid.prototype.IsContains = function(x, y) {
-    return ( x > (this.x - this.size / 2) && x < (this.x + this.size / 2) && (y > this.y - this.size / 2) && (y < this.y + this.size / 2));
-  };
-
-  Grid.prototype.CleanUp = function(selectedToken) {
-    if(this.token_list.length === 0) return;
-
-    // if the last token in token_list is equal to selectedToken we have something to do
-    var lastToken = this.token_list.slice(-1)[0];
-    if(lastToken == selectedToken) {
-        if( selectedToken.currentX === this.x && selectedToken.currentY === this.y ) {
-            if( this.token_list.length > 1 ) {
-                this.token_list[this.token_list.length - 2].visible = false;
-            }
-        }
-    }
-  };
-
-  var PlayGround = function() {
-    this.grid_count = gridCount * gridCount;
-    this.grid_size = gridSize;
-    this.padding = paddingOfBoard;
-    this.gridList = [];
-    this.lines = [];
-    this.winner = 0;
-
-    for(var row = 0; row < gridCount; row++) {
-        for(var col = 0; col < gridCount; col++) {
-            this.gridList.push(new Grid(this.padding + (col + 0.5) * this.grid_size + paddingExtraH, this.padding + (row + 0.5) * this.grid_size + paddingExtraV, this.grid_size));
-        }
-    }
-  };
-
-  PlayGround.prototype.reset = function() {
-    this.gridList.forEach(function(grid) {
-        grid.token_list = [];
-        grid.owner = 0;
-    });
-    this.lines = [];
-    this.winner = 0;
-  };
-
-  PlayGround.prototype.check = function() {
-    if( this.lines.length > 0 ) return true;
-    var bFound = false;
-
-    // check horizontal line
-    for(var row = 0; row < gridCount; row++) {
-      bFound = true;
-
-      if( this.gridList[row * gridCount].owner === 0 ) {
-        bFound = false;
-        continue;
-      } else {
-        for(var col = 0; col < gridCount - 1; col++) {
-          bFound = this.gridList[row * gridCount].owner === this.gridList[row * gridCount + col + 1].owner;
-          if(!bFound) {
-            break;
-          }
-        }
-      }
-      if(bFound) {
-        console.log("Found Winner: " + this.gridList[row * gridCount].owner);
-        this.lines.push(this.gridList[row * gridCount]);
-        this.lines.push(this.gridList[(row + 1) * gridCount - 1]);
-        break;
-      }
-    }
-
-    // check vertical line
-    for(var col = 0; col < gridCount; col++) {
-      bFound = true;
-
-      if( this.gridList[col].owner === 0 ) {
-        bFound = false;
-        continue;
-      } else {
-        for(var row = 0; row < gridCount - 1; row++) {
-          bFound = this.gridList[col].owner === this.gridList[(row + 1) * gridCount + col].owner;
-          if(!bFound) {
-            break;
-          }
-        }
-      }
-      if(bFound) {
-        console.log("Found Vertical Winner: " + this.gridList[col].owner);
-        this.lines.push(this.gridList[col]);
-        this.lines.push(this.gridList[col + (gridCount - 1) * gridCount]);
-        break;
-      }
-    }
-
-    // check cross line 1
-    if( this.gridList[0].owner != 0 ) {
-      bFound = true;
-      for(var i = 0; i < gridCount-1; i++) {
-        bFound = this.gridList[0].owner === this.gridList[(i + 1) * gridCount + (i + 1)].owner;
-
-        if(!bFound) {
-          break;
-        }
-      }
-      if(bFound) {
-        console.log("Found cross line 1 Winner: " + this.gridList[0].owner);
-        this.lines.push(this.gridList[0]);
-        this.lines.push(this.gridList[this.gridList.length-1]);
-      }
-    }
-
-    // check cross line 2
-    if( this.gridList[gridCount-1].owner != 0) {
-      bFound = true;
-      for(var i = 0; i < gridCount-1; i++) {
-        bFound = this.gridList[gridCount-1].owner === this.gridList[(i+2)*(gridCount-1)].owner;
-
-        if(!bFound) {
-          break;
-        }
-      }
-      if(bFound) {
-        console.log("Found cross line 2 Winner: " + this.gridList[gridCount-1].owner);
-        this.lines.push(this.gridList[gridCount-1]);
-        this.lines.push(this.gridList[(gridCount-1) * gridCount]);
-      }
-    }
-    if(this.lines.length > 0) {
-      this.winner = this.lines[0].owner;
-    }
-
-    return (this.lines.length > 0);
-  };
-
-  var Token = function(id, size, color, image) {
-    this.player_id = id;
-    this.size = size;
-    this.color = color;
-    this.image = image;
-    this.selected = false;
-    this.used = false;
-    this.visible = true;
-    this.currentX = 0;
-    this.currentY = 0;
-    this.currentSize = 0;
-    this.parentGrid;
-  };
-
-  Token.prototype.setTokenInfo = function(x, y, size) {
-    this.currentX = x;
-    this.currentY = y;
-    this.currentSize = size;
-  };
+  var gameScene = GAME_SCENE_HOME;
+  var image_left = paddingExtraH;
+  var image_step = 2;
 
   Token.prototype.draw = function(x, y, size) {
     if(this.selected) {
@@ -229,128 +70,6 @@
     }
   };
 
-  Token.prototype.IsContains = function(x, y) {
-    return (Math.pow(x - this.currentX, 2) + Math.pow(y - this.currentY, 2)) < Math.pow(this.currentSize / 2, 2);
-  };
-
-  var Player = function(id, name, color, image) {
-    this.id = id;
-    this.name = name;
-    this.color = color;
-    this.image = image;
-    this.tokens = [new Token(id, TOKEN_SIZE_SMALL, color, image), new Token(id, TOKEN_SIZE_SMALL, color, image),
-                   new Token(id, TOKEN_SIZE_MEDIUM, color, image), new Token(id, TOKEN_SIZE_MEDIUM, color, image),
-                   new Token(id, TOKEN_SIZE_LARGE, color, image), new Token(id, TOKEN_SIZE_LARGE, color, image)];
-  };
-
-  Player.prototype.reset = function() {
-    this.tokens.forEach(function(element) {
-        element.selected = false;
-        element.used = false;
-        element.visible = true;
-    });
-  };
-
-  Player.prototype.DoClickAction = function(x, y) {
-    var bFindTokenToSelect = false;
-    var bValidAction = false;
-    var clickedToken;
-    var bAlreadySelectedToken = false;
-    var selectedToken;
-
-    // Get MouseX and MouseY and verify if any token is selected
-    for(var i = 0; i < this.tokens.length; i++) {
-        if(this.tokens[i].visible && this.tokens[i].IsContains(x, y)) {
-            bFindTokenToSelect = true;
-            clickedToken = this.tokens[i];
-        }
-        if(this.tokens[i].selected) {
-            bAlreadySelectedToken = true;
-            selectedToken = this.tokens[i];
-        }
-    }
-
-    // If user click on a token, that means either he want to select or unselect a token
-    if(bFindTokenToSelect) {
-        if(clickedToken.selected) {
-            clickedToken.selected = false;
-            bAlreadySelectedToken = false;
-        } else {
-            // if the token was not clicked, we should unselect previous selected token first
-            if(bAlreadySelectedToken)
-                selectedToken.selected = false;
-            clickedToken.selected = true;
-        }
-    }
-    // otherwise, user may try to click on the grid that he want to do a real move
-    else if(bAlreadySelectedToken)
-    {
-        // if x and y fall into any grid range, and there is no token equal and bigger to this one,
-        // we move the token user selected to this grid
-        playground.gridList.forEach(function(grid) {
-            if( grid.IsContains(x, y) &&
-                (grid.token_list.length === 0 || (grid.token_list.length > 0 && grid.token_list[grid.token_list.length - 1].size < selectedToken.size)) ){
-
-                if(!selectedToken.used) {
-                  selectedToken.parentGrid = grid;
-                } else {
-                  selectedToken.parentGrid.token_list.pop();
-                  if(selectedToken.parentGrid.token_list.length > 0) {
-                    selectedToken.parentGrid.token_list[selectedToken.parentGrid.token_list.length - 1].visible = true;
-                    selectedToken.parentGrid.owner = selectedToken.parentGrid.token_list[selectedToken.parentGrid.token_list.length - 1].player_id;
-                  } else {
-                    selectedToken.parentGrid.owner = 0;
-                  }
-                }
-
-                selectedToken.selected = false;
-                selectedToken.used = false;
-                if(!playground.check()) {
-                  // move the token to this grid
-                  selectedToken.used = true;
-                  selectedToken.setTokenInfo(grid.x, grid.y, selectedToken.size);
-                  grid.token_list.push(selectedToken);
-                  grid.owner = selectedToken.player_id;
-                  selectedToken.parentGrid = grid;
-                  bValidAction = true;
-                }
-            }
-        });
-
-        // After we decide if a token was moved, we need to clean up token_list in gridList
-        playground.gridList.forEach(function(grid) {
-            grid.CleanUp(selectedToken);
-        });
-
-    }
-    // if there is no token selected before and user does not click any token, we do nothing
-    else
-    {
-        // do nothing here for now
-    }
-
-    return bValidAction;
-  };
-
-  var Button = function(text, x, y, w, h, radius) {
-    this.text = text;
-    this.x = x;
-    this.y = y;
-    this.w = w;
-    this.h = h;
-    this.radius = radius;
-    this.color = color(93,194,83);
-    this.text_color = color(213,251,209);
-    this.stroke_color = color(213,251,209);
-    this.stroke_weight = 5;
-    this.text_size = 36;
-  };
-
-  Button.prototype.IsContains = function(x, y) {
-    return (x > this.x && x < this.x + this.w &&
-            y > this.y && y < this.y + this.h);
-  }
-
   Button.prototype.draw = function() {
     fill(this.color);
     stroke(this.stroke_color);
@@ -364,10 +83,17 @@
 
   var player1 = new Player(1, "Player 1", color(213,251,209), loadImage("images/cs-winston.png"));
   var player2 = new Player(2, "Player 2", color(58,121,52), loadImage("images/cs-ohnoes.png"));
-  var start_button = new Button("Start", paddingOfBoard + 30 + paddingExtraH, gridSize * 2 + paddingOfBoard + paddingExtraV, gridSize, gridSize * 0.3, gridSize / 10);
-  var options_button = new Button("Back", maxSize + paddingExtraH - (paddingOfBoard + 30) - gridSize, gridSize * 2 + paddingOfBoard + paddingExtraV, gridSize, gridSize * 0.3, gridSize / 10);
+  var start_button_x = paddingOfBoard + 30 + paddingExtraH;
+  var start_button_y = gridSize * 2 + paddingOfBoard + paddingExtraV;
 
-  var playground = new PlayGround();
+  var options_button_x = maxSize + paddingExtraH - (paddingOfBoard + 30) - gridSize;
+  var options_button_y = gridSize * 2 + paddingOfBoard + paddingExtraV;
+  var start_button = new Button("Start", start_button_x, start_button_y, gridSize, gridSize * 0.3, gridSize / 10);
+  var options_button = new Button("Back", options_button_x, options_button_y, gridSize, gridSize * 0.3, gridSize / 10);
+  start_button.SetColorTheme(color(93,194,83), color(213,251,209), color(213,251,209));
+  options_button.SetColorTheme(color(93,194,83), color(213,251,209), color(213,251,209));
+
+  var playground = new PlayGround(gridCount, gridSize, paddingOfBoard, paddingExtraH, paddingExtraV);
 
   var stepCounter = 0;
   var players = [player1, player2];
@@ -475,7 +201,7 @@
       if(gameScene != GAME_SCENE_PLAYGROUND) return;
 
       var currentPlayer = players[stepCounter % 2];
-      if(currentPlayer.DoClickAction(mouseX, mouseY)) {
+      if(currentPlayer.DoClickAction(mouseX, mouseY, playground)) {
         stepCounter++;
       }
 
@@ -505,11 +231,7 @@
     }
   };
 
-  var gameScene = GAME_SCENE_HOME;
-  var image_left = paddingExtraH;
-  var image_step = 2;
-
-  void draw() {
+  draw = function() {
     switch (gameScene) {
         case GAME_SCENE_HOME:
             {
@@ -529,11 +251,6 @@
     }
   };
   </script>
-  <style>
-    body {
-      padding-left: 10px;
-    }
-  </style>
   </head>
   <body>
   <div class="canvas_div" align="center" >
