--- a/public/WinstonNOhnoes_Fullscreen.html
+++ b/public/WinstonNOhnoes_Fullscreen.html
@@ -42,34 +42,8 @@
   <script src="game/Token.js"></script>
   <script src="game/Player.js"></script>
   <script src="game/Button.js"></script>
+<!--
   <script type="text/processing" data-processing-target="processing-canvas">
-  /* @pjs preload="images/cs-winston.png,images/cs-ohnoes.png"; */
-
-  var gridSize = 160;
-  var gridCount = 3;
-  var paddingOfBoard = 120;
-  var maxSize = gridSize * gridCount + paddingOfBoard * 2;
-  var paddingExtraH = (window.innerWidth - maxSize) / 2;
-  var paddingExtraV = (window.innerHeight - maxSize) / 2;
-
-  var gameScene = GAME_SCENE_HOME;
-  var image_left = paddingExtraH;
-  var image_step = 0;
-
-  setup = function() {
-    size(window.innerWidth , window.innerHeight);
-  }
-
-  // size(window.innerWidth, window.innerHeight);
-  draw = function() {
-    image_step++;
-    if( image_step % 60 === 0 ) {
-      console.log('draw tick()')
-    }
-    background(255);
-    fill(color(93,194,83));
-    ellipse(100, 100, 50, 50);
-  }
 
 
   // Token.prototype.draw = function(x, y, size) {
@@ -272,10 +246,11 @@
   //   tick++;
   // };
   </script>
+-->
   </head>
   <body>
   <div class="canvas_div" align="center" >
-  <canvas id="processing-canvas"></canvas>
+  <canvas id="processing-canvas" data-processing-sources="game/main.pde"></canvas>
   </div>
   </body>
 </html>
