--- a/public/WinstonNOhnoes_Fullscreen.html
+++ b/public/WinstonNOhnoes_Fullscreen.html
@@ -7,16 +7,7 @@
     margin: 0px;
     padding: 0px;
   }
-  canvas {
-    outline: 0px;
-    position: absolute;
-    margin: 0px;
-    padding: 0px;
-    left: 0px;
-    top: 0px;
-    width: 100%;
-    height: 100%;
-  }
+
   </style>
   <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
   <script>
@@ -250,7 +241,7 @@
   </head>
   <body>
   <div class="canvas_div" align="center" >
-  <canvas id="processing-canvas" data-processing-sources="game/main.pde"></canvas>
+  <canvas id="processing-canvas" data-processing-sources="game/main.pde" style="image-rendering: -webkit-optimize-contrast !important;"></canvas>
   </div>
   </body>
 </html>
