try simplest sample

--- a/public/WinstonNOhnoes_Fullscreen.html
+++ b/public/WinstonNOhnoes_Fullscreen.html
@@ -241,7 +241,7 @@
   </head>
   <body>
   <div class="canvas_div" align="center" >
-  <canvas id="processing-canvas" data-processing-sources="game/main.pde" style="image-rendering: -webkit-optimize-contrast !important;"></canvas>
+  <canvas id="processing-canvas" data-processing-sources="game/main.pde"></canvas>
   </div>
   </body>
 </html>
