--- a/public/game.html
+++ b/public/game.html
@@ -1,2 +1,10 @@
-<script src="js/processing-1.4.8.min.js"></script>
-<canvas data-processing-sources="game/game.pde"></canvas>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Adam & Alvin's Lab - Winston & Ohnoes</title>
+  <head>
+  <body>
+    <script src="js/processing-1.4.8.min.js"></script>
+    <canvas data-processing-sources="game/game.pde"></canvas>
+  </body>
+</html>
