--- a/public/game.html
+++ b/public/game.html
@@ -27,6 +27,6 @@
     <script src="game/Token.js"></script>
     <script src="game/Player.js"></script>
     <script src="game/Button.js"></script>
-    <canvas data-processing-sources="game/game.pde"></canvas>
+    <canvas data-processing-sources="game/main.js"></canvas>
   </body>
 </html>
