Add fightroom feature

--- a/public/game.html
+++ b/public/game.html
@@ -20,8 +20,16 @@
       </li>
       <li class="options page">
         <div class="form">
+          <h3 class="title">請輸入對戰室名稱?</h3>
+          <input class="fightroomInput" type="text" maxlength="14" />
           <h3 class="title">請輸入你的大名?</h3>
           <input class="usernameInput" type="text" maxlength="14" />
+        </div>
+      </li>
+      <li class="waiting page">
+        <div class="form">
+          <h3 class="title">等待玩家加入中</h3>
+          <button class="cancelButton">取消</button>
         </div>
       </li>
     </ul>
