--- a/public/game.html
+++ b/public/game.html
@@ -4,6 +4,22 @@
     <title>Adam & Alvin's Lab - Winston & Ohnoes</title>
     <link rel="stylesheet" href="/game/style.css">
     <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
+    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <script>
+         (adsbygoogle = window.adsbygoogle || []).push({
+                       google_ad_client: "ca-pub-1164195389773753",
+                                 enable_page_level_ads: true
+                                      });
+    </script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-134630487-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
+
+            gtag('config', 'UA-134630487-1');
+    </script>
     <script>
       var is_iOS = function() {
         return /iPad|iPhone|iPod/.test(navigator.userAgent) && !window.MSStream;
