--- a/public/game.html
+++ b/public/game.html
@@ -33,12 +33,14 @@
           var $title = $('.title');
           var $usernameInput = $('.usernameInput');
           var $fightroomInput = $('.fightroomInput');
+          var $joinButton = $('.joinButton');
           var $cancelButton = $('.cancelButton');
 
           $title.css('font-size', '500%');
 
           $usernameInput.css('font-size', '500%');
           $fightroomInput.css('font-size', '500%');
+          $joinButton.css('font-size', '400%');
 
           $cancelButton.css('font-size', '400%');
 
@@ -74,6 +76,9 @@
           <input class="fightroomInput" type="text" maxlength="14" />
           <h3 class="title">請輸入你的大名?</h3>
           <input class="usernameInput" type="text" maxlength="14" />
+          <div>
+            <button class="joinButton">加入</button>
+          </div>
         </div>
       </li>
       <li class="waiting page">
