Add fightroom is full check

--- a/public/game.html
+++ b/public/game.html
@@ -85,6 +85,7 @@
         <div class="form">
           <h3 class="title">等待玩家加入中</h3>
           <button class="cancelButton">取消</button>
+          <div class="status">0</div>
         </div>
       </li>
     </ul>
