--- a/public/game.html
+++ b/public/game.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Adam & Alvin's Lab - Winston & Ohnoes</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1, min-scale=1, max-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="/game/style.css">
     <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
     <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
