--- a/public/game.html
+++ b/public/game.html
@@ -22,7 +22,7 @@
       gtag('config', 'UA-134630487-2');
     </script>
   <head>
-  <body onload="onPageLoaded()">
+  <body>
     <script src="js/processing-1.4.8.min.js"></script>
     <script src="game/Constants.js"></script>
     <script src="game/Grid.js"></script>
