Fix touchstart exception

--- a/public/game.html
+++ b/public/game.html
@@ -23,7 +23,7 @@
     </script>
   <head>
   <body>
-    <script src="js/processing-1.4.8.min.js"></script>
+    <script src="js/processing-1.4.8.js"></script>
     <script src="game/Constants.js"></script>
     <script src="game/Grid.js"></script>
     <script src="game/PlayGround.js"></script>
